src/FinancialForce Accounting/objects/SummarizationTemplate__c.object
<CustomObject>
    <customHelpPage>codahelpsummarizationtemplate</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>The destination SObject, i.e. the table in which the summarization template is held.</description>
        <label>Destination</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Filter__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastSuccessfulBuild__c</fullName>
        <label>Last Successful Build</label>
        <summarizedField>SummarizationRunInformation__c.EndTime__c</summarizedField>
        <summaryForeignKey>SummarizationRunInformation__c.SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <formula>IF(AND(TotalNumberOfErrors__c=0,TotalNumberOfAborts__c=0,TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(TotalNumberOfErrors__c = TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectToObjectMap__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The object to object map that this summarization template is based on.</description>
        <label>ObjectToObjectMap</label>
        <referenceTo>ObjectToObjectMap__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The dataview that acts as the source of the field names for this summarization template.</description>
        <label>Dataview</label>
        <referenceTo>DataView__c</referenceTo>
        <relationshipLabel>Su</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>SummarizationLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>SummarizationLog__c.SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>SummarizationLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>SummarizationLog__c.SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>SummarizationLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>SummarizationLog__c.SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>SummarizationLog__c.SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>zDeprecated:Summarization Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SourceDataview__c</columns>
        <columns>Status__c</columns>
        <columns>LastSuccessfulBuild__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarization Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>